vNEXT (in development)

 * (Internal) Moved message processors into their own package

v0.10.0

 * Batch start and end events are no longer included in BatchReceived events
 * Batches now expose complete metadata from their start event
 * Added support for labelled-replies capability and label message tags
 * Added support for message-tags capability after it moved from draft
 * Added new methods for sending raw lines to the IRC server
   * send(tagMap(...), command, arguments) replaces send(line)
   * send(command, arguments) is available if no tags are to be sent
   * the line is built automatically (with spaces/' :' added appropriately)
   * send(line) is deprecated and will be removed after v1.0.0
 * Add 'alwaysEchoMessages' behaviour that makes it easier to deal with servers
   that don't support the echo message capability
 * Added TargetedEvent, a subclass of IrcEvent, for all events that are
   targeted to a user or channel
 * (Internal) Added annotation to track removal of deprecated methods
 * (Internal) Migrate unit tests to use Mockk instead of Mockito

v0.9.0

 * Improve DSL for creating an IrcClient to allow parameters to be passed to server and profile
   e.g. IrcClient { server("irc.example.com", 6667) }
 * Add behaviour options
   * requestModesOnJoin - automatically sends a MODE request when joining a channel
 * Events now have a `metadata` property instead of a `time` (and time is available in metadata)
   * IrcEvent.time is now deprecated but will remain until after v1.0.0.
   * Metadata now contains the message ID, if any.
     * ActionReceived.messageId and MessageReceived.messageId are now deprecated, to be removed after v1.0.0.
   * Metadata now contains the event's batch ID, if any.
 * Added support for batches
   * All events in a batch are buffered until the batch is finished
   * The events are then published together in a single `BatchReceived` event
 * Added support for CHGHOST messages