@@ -194,3 +194,23 @@ class BatchFinished(metadata: EventMetadata, val referenceId: String) : IrcEvent
 
 /** A batch of events that should be handled together. */
 class BatchReceived(metadata: EventMetadata, val type: String, val params: Array<String>, val events: List<IrcEvent>) : IrcEvent(metadata)
+
+/**
+ * Raised when attempting to set or change our nickname fails.
+ *
+ * If this happens before {ServerReady], the nickname must be changed for registration to continue.
+ */
+class NicknameChangeFailed(metadata: EventMetadata, val cause: NicknameChangeError): IrcEvent(metadata) {
+    /** Reasons a nick change may fail. */
+    enum class NicknameChangeError {
+        /** The nickname is not allowed by the server. */
+        ErroneousNickname,
+        /** The nickname is already in use. */
+        AlreadyInUse,
+        /** The nickname has collided with another somehow. */
+        Collision,
+        /** No nickname was provided. */
+        NoNicknameGiven
+    }
+}
+
